testsuite/tests/patsyn/should_fail/T9161-1.stderr

T9161-1.hs:6:14: error:
    • Pattern synonym ‘PATTERN’ cannot be used here
        (pattern synonyms cannot be promoted)
    • In the type signature: wrongLift :: PATTERN
